# millie_bot

./: .env  Bot.toml  Cargo.toml  Makefile.toml  docker-compose.yml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  main.rs
