[package]
name = "millie_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["rt", "net", "macros"] }
toml = "0.5.9"
